src/org/iplant/pipeline/client/css/PipelineBuilder.css
/* ... */
.simple-button input,.simple-button-down input {
	position: absolute;
	font-size: 30px;
	right: 0;
	bottom: -25px;
	opacity: 0;
	width: 45px;
	filter: alpha(opacity = 0);
}

.simple-button:hover,.simple-button .gwt-Label:hover,.simple-button-sel:hover,.simple-button-sel .gwt-Label:hover
	{
	background-color: #84B4EA;
	cursor: pointer;
}

.gwt-SuggestBoxPopup {
	background-color: white;
	border: 1px solid #555;
	border-radius: 5px;
	-moz-border-radius: 5px;
}

.gwt-SuggestBoxPopup tr tr:hover {
	background-color: #84B4EA;
	cursor: pointer;
}

/*Pipeline creator*/
.pipe-workspace {
	border-radius: 10px;
	-moz-border-radius: 10px;
	position: relative;
	height: 100%;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
	overflow-y:auto;
}

.sub-workspace {
	width: 400px;
	padding-bottom: 20px;
	padding-left: 10px;
	padding-right: 10px;
	height: 100px;
	background-color: #DDD;
	border-radius: 10px;
	-moz-border-radius: 10px;
	border: 2px solid #A5CAF4;
}
#pipeline-builder{
	height: 100%;
}
.pipe-table{
	width:100%;
}
.pipe-table tr {
	height: 100%;
}

.pipeinput {
	border: 2px solid #5993D4;
	margin-top: -5px;
	float: left;
	width: 100%;
}

.pipeinput .output-block {
	margin-top: 4px;
	margin-right: 4px;
	float: left;
	height: 15px;
	padding: 0 6px;
}

.pipe-workspace .hover {
	background-color: #A5CAF4;
}

.for-loop .ftop,.for-loop .fbottom {
	min-width: 100px;
	width: 100%;
	background-color: #7691AF;
	color: white;
	text-align: center;
}

.for-loop .ftop {
	border-radius: 10px 10px 0 0;
	-moz-border-radius: 10px 10px 0 0;
}

.for-loop .fbottom {
	border-radius: 0 0 10px 10px;
	-moz-border-radius: 0 0 10px 10px;
}

.for-loop .workspace {
	min-height: 20px;
	opacity: .8;
}

.trash {
	position: absolute;
	top: 5px;
	left: 10px;
	height:60px;
}

.block .center {
	background-color: #36679F;
}

.block .center {
	color: white;
	text-align: center;
	padding: 0 4px 0 4px;
	vertical-align: middle;
	cursor: pointer;
}

.block .right-expand {
	border-radius: 0 10px 10px 0;
	-moz-border-radius: 0 10px 10px 0;
	border-left: 1px dashed white;
	background-color: #36679F;
	height: 30px;
	width: 15px;
	cursor: pointer;
}

.block .left-expand {
	-moz-border-radius: 10px 0 0 10px;
	border-radius: 10px 0 0 10px;
	border-right: 1px dashed white;
	background-color: #36679F;
	height: 30px;
	width: 15px;
	cursor: pointer;
}

.block .right-expand .arrow2,.block .left-expand .arrow2 {
	border-color: transparent transparent transparent white;
	border-style: solid;
	border-width: 5px;
	width: 0;
	height: 0;
	position: relative;
	top: 9px;
	left: 5px;
}

.block .input-panel,.block .output-panel {
	height: 30px;
	border: 1px solid #36679F;
	background-color: #36679F;
	border-left: 1px dashed white;
	padding-left: 3px;
}

.block .input-panel {
	border-right: 1px dashed white;
	border-left: none;
}

.block .input-block {
	margin-right: 3px;
}

.block .input-block .top {
	border: 1px solid white;
	border-bottom: none;
	height: 13px;
	border-radius: 8px;
	-moz-border-radius: 8px;
}

.block .input-block .bottom {
	border: 1px solid white;
	border-top: none;
	height: 13px;
	border-radius: 8px;
	-moz-border-radius: 8px;
}

.block .input-block .name {
	color: white;
	font-size: 10px;
	background-color: #A63A2C;
	border-radius: 5px;
	-moz-border-radius: 5px;
	padding: 0 3px 0 3px;
}

.output-block {
	background-color: #A6762C;
	color: white;
	border-radius: 5px;
	-moz-border-radius: 5px;
	font-size: 10px;
	height: 13px;
	padding: 0 3px 0 3px;
	cursor: pointer;
}

.function-block {
	background-color: #36689F;
	color: white;
	border-radius: 5px;
	-moz-border-radius: 5px;
	font-size: 10px;
	height: 13px;
	padding: 0 3px 0 3px;
	cursor: pointer;
}

.center img {
	height: 20px;
	width: 20px;
	padding-top: 3px;
}

.block,.for-loop,.sub-workspace {
	display: table;
	margin-left: auto;
	margin-right: auto;
}

.block-arrow {
	height: 32px;
}

.hoverO .block,.hoverO .htop {
	border-top: 3px dashed #84B4EA;
}

.start-block {
	padding:5px;
	margin-left: auto;
	margin-right: auto;
	background-color: #84B4EA;
	border-radius: 10px;
	-moz-border-radius: 10px;
	color: white;
	text-align: center;
	cursor: pointer;
	display:table;
}

.block:hover {
	cursor: move;
}

.block .notchT,.block .notchB {
	border-radius: 0 0 10px 10px;
	-moz-border-radius: 0 0 10px 10px;
}

.block .notchT {
	background-color: #DDD;
	background: #DDD;
	opacity: 0;
}

/*Tooltip stuff*/
.tooltip {
	font-size: 13px;
	color: white;
	background-color: #123A67;
	border-radius: 5px;
	-moz-border-radius: 5px;
	padding: 3px;
    z-index: 50000;
}

.tooltip-small {
	font-size: 10px;
	color: white;
	background-color: #123A67;
	border-radius: 5px;
	-moz-border-radius: 5px;
	padding: 3px;
    z-index: 50000;
}

.drop-here {
	border: 2px dashed #6288B3;
	border-radius: 10px;
	-moz-border-radius: 10px;
}

/*
*  the table section
*/
.eta-table .header {
	border: 1px solid #CCC;
	border-radius: 5px 5px 0 0;
	-moz-border-radius: 5px 5px 0 0;
	font-size: 15px;
	color: #1D508A;
	background: -webkit-gradient(linear, left top, left bottom, from(#fff),
		to(#ccc) );
	background: -moz-linear-gradient(top, #fff, #ccc);
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
}

.eta-table .tab-bar {
	border-radius: 5px;
}

.eta-table .data {
	table-layout: fixed;
}

.eta-table .data td {
	border-bottom: 1px solid #DDD;
	font-size: 12px;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
	overflow: hidden;
	white-space: nowrap;
}

.eta-table .data .drag-over td {
	background-color: #84B4EA;
}

.eta-table .data .drag-over td td {
	border: none;
}

.eta-table .data tr:hover {
	background-color: #CCC;
}

.eta-table .data tr .hover-icons {
	display: none;
}

.eta-table .data tr:hover .hover-icons {
	display: block;
	position: relative;
	right: 130px;
	background: none;
}
/* ... */

